syntax = "proto3";

import "src/proto/artifact.proto";
import "src/proto/run_id.proto";
import "src/proto/project_id.proto";

package observation_tools.proto;

option java_multiple_files = true;
option java_package = "tools.observation.proto";

message CreateArtifactRequest {
  ProjectId project_id = 8;
  RunId run_id = 4;
  ArtifactId artifact_id = 5;
  SeriesPoint series_point = 7;

  oneof data {
    ArtifactData artifact_data = 2;
    ArtifactUpdate artifact_update = 6;
  }

  reserved 1, 3;
}

message CreateArtifactResponse {
}